# openai-llm-contracts

./: .env.example  .gitignore  LICENSE  MANIFEST.in  PRODUCTION_EXAMPLES.md  README.md  RELIABILITY_ENHANCEMENT_SUMMARY.md  SECURITY.md  complex_pycontract_syntax.py  comprehensive_contract_taxonomy.md  contract_coverage_plan.md  contract_coverage_summary.md  contract_extension_roadmap.py  demo_basic_contracts.py  demo_notebook.ipynb  demo_pycontract_style.py  demo_robust_reliability.py  enhanced_pycontract_demo.py  production_ready_example.py  pycontract_style_example.py  pyproject.toml  real_world_openai_example.py  setup.py  simple_pycontract_test.py  test_comprehensive_contracts.py  test_context_window.py  test_live_api.py  test_openai_reliability_integration.py  test_provider_integration.py  test_pycontract_comprehensive.py  test_pycontract_examples.py  test_reliability_standalone.py  test_tokenizer.py  validate_pycontract_integration.py
docs/: ARCHITECTURE.md
examples/: ab_testing_demo.py  comprehensive_demo.py  conversation_state_demo.py  demo_openai_provider.py  ecosystem_integration_demo.py  llmcl_demo.py  simple_demo.py  streaming_validation_demo.py
src/llm_contracts/: __init__.py
src/llm_contracts/contracts/: base.py
src/llm_contracts/conversation/: context_manager.py  conversation_invariants.py  conversation_memory.py  state_manager.py  temporal_contracts.py
src/llm_contracts/ecosystem/: __init__.py  guardrails_adapter.py  langchain_integration.py  opentelemetry_integration.py  pydantic_integration.py
src/llm_contracts/experiments/: experiment_manager.py
src/llm_contracts/language/: integration.py
src/llm_contracts/plugins/: __init__.py  anthropic_plugin.py  azure_plugin.py  google_plugin.py  huggingface_plugin.py  openai_plugin.py  plugin_manager.py  provider_plugin.py
src/llm_contracts/providers/: openai_provider.py
src/llm_contracts/reliability/: __init__.py  circuit_breaker.py  retry_mechanism.py
src/llm_contracts/utils/: tokenizer.py
src/llm_contracts/validators/: output_validator.py
tests/: __init__.py  test_conversation.py  test_ecosystem.py  test_reliability.py
